--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "native-base": "2.6.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-animated-bar": "^0.2.0",
     "react-navigation": "1.5.0"
   }
 }
