--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZingUpLife",
+  "name": "NativebaseKitchenSink",
   "version": "2.5.2",
   "private": true,
   "devDependencies": {
@@ -32,10 +32,12 @@
     "color": "1.0.3",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "native-base": "2.6.1",
+    "native-base": "^2.6.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-material-design": "^0.3.7",
+    "react-native-progress": "^3.5.0",
+    "react-native-snap-carousel": "^3.7.2",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.0"
   }
