--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "native-base": "2.6.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
-
     "react-native-animated-bar": "^0.2.0",
     "react-native-material-design": "^0.3.7",
+    "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.0"
   }
