ADDED     "react-native-swiper": "^1.5.13" IN PACKAGE.JSON

--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "react-native": "0.55.4",
     "react-native-animated-bar": "^0.2.0",
     "react-native-material-design": "^0.3.7",
-    "react-native-swiper": "^1.5.13",
     "react-native-progress": "^3.5.0",
+    "react-native-progress-bar-animated": "^1.0.6",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.0"
   }
